[package]
name = "common-mem-prof"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-error = { path = "../error" }
snafu.workspace = true
tempfile = "3.4"
tokio.workspace = true

[target.'cfg(unix)'.dependencies.tikv-jemalloc-sys]
version = "0.5"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]


[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
tikv-jemallocator = "0.5"
